--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,8 @@ pandas>=2.2.0
 pyarrow>=11.0.0
 openpyxl>=3.1.5
 fastavro>=1.12.1
+tensorflow>=2.15.0
+scikit-learn>=1.4.0
+joblib>=1.3.2
+numpy>=1.26.0
+xgboost>=2.0.0
