--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "plotly.js": "^3.3.1",
+    "puppeteer": "^24.34.0",
     "react": "19.2.1",
     "react-apexcharts": "^1.9.0",
     "react-dom": "19.2.1",
